# C-

AppTest/: CMakeLists.txt  Main.qml  WebSocketClient.cpp  WebSocketClient.h  WebSocketServer.cpp  WebSocketServer.h  main.cpp
clientQT/: CMakeLists.txt  Client.cpp  Client.h  main.cpp
severQT/: CMakeLists.txt  main.cpp  server.cpp  server.h
